[package]
name = "ko2_terminal"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A terminal-based sampler/sequencer inspired by Teenage Engineering K.O.II"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
